[package]
name = "qe_mac_apid"
version = "0.1.0"
license = "GPL-3.0-only"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.34", features = ["derive"] }
clap-verbosity-flag = "3.0.2"
env_logger = "0.11.7"
fatfs = "0.3.6"
gpt = "4.1.0"
imago = { version = "0.1.4", features = ["sync-wrappers"] }
log = "0.4.27"
open = "5.3.2"
plist = "1.7.0"
rand = "0.9.0"
serde = { version = "1.0.218", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
uuid = { version = "1.15.1", features = ["v4", "serde"] }

[build-dependencies]
bindgen = "0.71.1"
cc = "1.2.16"
